[package]
name = "nweb"
authors = ["nasyt", "NAS油条",]
version = "0.1.0"
edition = "2021"
description = "A lightweight and high-performance static Web service built with Rust language nweb"
readme = "README.md"
homepage = "https://nasyt.hoha.top"
repository = "https://github.com/nasyt233/nweb"
license = "MIT OR Apache-2.0"
keywords = ["nweb", "nasyt", "web",]


[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }